# nedobash

./: CMakeLists.txt  README.md  command_description.h  command_parser.h  exec.h  exec2.h  main.c
src/: bc.c  command_adder.c  command_adder.h  command_description.h  command_parser.c  command_parser.h  exec.c  exec.h  help.c  help.h  main.c  plugin_load.c  plugin_load.h
